style.css
/* https://medium.com/@codefoxx/how-to-create-a-slide-transition-between-separate-pages-with-html-css-and-javascript-bb7a14393d1 */

html {
  scroll-behavior: smooth;
}

body {
  background-color: black;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
}

h1 {
  font-family: 'Righteous', cursive;
  color: black;
  font-size: 64px;
  line-height: 40%;
  letter-spacing: 4px;
}

h2 {
  font-family: 'Khand', sans-serif;
  font-style: italic;
  color: white;
  font-size: 6vh;
  padding-left: 3%;
  padding-top: 2%;
}

h3 {
  font-family: 'Khand', sans-serif;
  font-style: italic;
  color: white;
  font-size: 5vh;
}

h4 {
  font-family: 'Khand', sans-serif;
  font-style: italic;
  color: white;
  font-size: 3vh;
}

p {
  font-family: 'Barlow', sans-serif;
  color: white;
  font-size: 17.5px;
}

img {
  align-self: center;
}

ul li {
  color: white;
  font-family: 'Barlow', sans-serif;
  margin-top: 8px;
  font-size: 17px;
}

#emailbutton:hover {
  cursor: pointer;
}

.topbanner {
  text-align: center;
  height: 20%;
  margin: 0;
  padding: 0;
  position: -webkit-sticky;
	position: sticky;
	top: 0;
  z-index: 1;
  width: 100vw;
  display: flex;
  flex-direction: row;
}

#nametitle {
  width: 50%;
  text-align: right;
  margin: 0;
  padding-right: 2%;
  cursor: pointer;
  background-color: #765FD3;
}

#slidelinks {
  width: 50%;
  text-align: left;
  padding-right: 0;
  padding-left: 2%;
  /* padding-top: .5%; */
  line-height: 40%;
  background-color: black;
}

.content-container {
  padding-left: 3%;
  padding-right: 3%;
  padding-top: 1%;
  padding-bottom: 1%;
  display: flex;
  flex-direction: row;
  gap: 2%;
}

.slidelink {
  font-size: 21px;
  line-height: 4px;
}

.slidelink:hover {
  color: #8876cf;
  cursor: pointer;
}

a, a:link, a:visited {
  color: white;
  text-decoration: underline;
}

a:hover {
  color: #8876cf;
}

#mainimage {
  display: block;
  margin-left: auto;
  margin-right: auto;
  margin-top: 3%;
  width: 46%;
  object-fit: cover;
}

.container {
width: 100%;
overflow: hidden;
}
.pages {
display: flex;
width: 700%;
flex-direction: row;
}
.page {
width: 100%;
transition: all 1s;
}

button {
  background-color: #8876cf;
  border: none;
  color: white;
  padding-left: 40px;
  padding-right: 40px;
  padding-top: 10px;
  padding-bottom: 10px;
  text-align: center;
  text-decoration: none;
  font-size: 16px;
  border-radius: 40px;
}

button:hover {
  background-color: #765FD3;
}

* {box-sizing:border-box}
.mySlides {display:none}

/* Slideshow container */
.slideshow-container {
  max-width: 45%;
  position: relative;
  margin: auto;
}

/* Next & previous buttons */
.prev, .next {
  cursor: pointer;
  position: absolute;
  top: 50%;
  width: auto;
  padding: 16px;
  margin-top: -50px;
  color: white;
  font-weight: bold;
  font-size: 18px;
  transition: 0.6s ease;
  border-radius: 0 3px 3px 0;
  text-decoration: none;
}

/* Position the "next button" to the right */
.next {
  right: 0;
  border-radius: 3px 0 0 3px;
}

/* On hover, add a black background color with a little bit see-through */
.prev:hover, .next:hover {
  background-color: rgba(0,0,0,0.8);
}

/* Caption text */
.text {
  color: #f2f2f2;
  font-size: 15px;
  padding: 8px 12px;
  position: absolute;
  bottom: 8px;
  width: 100%;
  text-align: center;
}

/* Number text (1/3 etc) */
.numbertext {
  color: #f2f2f2;
  font-size: 12px;
  padding: 8px 12px;
  position: absolute;
  top: 0;
}

/* The dots/bullets/indicators */
.dot {
  cursor:pointer;
  height: 13px;
  width: 13px;
  margin: 0 2px;
  background-color: #bbb;
  border-radius: 50%;
  display: inline-block;
  transition: background-color 0.6s ease;
}

.active, .dot:hover {
  background-color: #717171;
}

/* Fading animation */
.fade {
  -webkit-animation-name: fade;
  -webkit-animation-duration: 1.5s;
  animation-name: fade;
  animation-duration: 1.5s;
}

@-webkit-keyframes fade {
  from {opacity: .4} 
  to {opacity: 1}
}

@keyframes fade {
  from {opacity: .4} 
  to {opacity: 1}
}

@media only screen and (max-width: 600px) {

  h1{
    font-size: 55px;
  }

  .content-container {
    padding-left: 20px;
    padding-right: 20px;
    padding-top: 20px;
    padding-bottom: 20px;
    display: flex;
    flex-direction: column;
    gap: 5px;
  }

  .topbanner {
    text-align: center;
    height: 36vh;
    margin: 0;
    padding: 0;
    position: relative;
    top: 0;
    z-index: 1;
  }

  img {
    width: 100vw;
    object-fit: cover;
    object-position: top;
  }
  
}

